[package]
name = "steam-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
awc = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
